GNOME Bugzilla – Bug 681148
gnutls: Fix invalid printf format
Last modified: 2012-08-03 16:31:24 UTC
It seems like the printf format on these lines is invalid. It produces warnings: gtlsconnection-gnutls.c:205:3: warning: unknown conversion type character 'U' in format [-Wformat] gtlsconnection-gnutls.c:206:3: warning: unknown conversion type character 'U' in format [-Wformat]
Created attachment 220259 [details] [review] gnutls: Fix invalid printf format
Comment on attachment 220259 [details] [review] gnutls: Fix invalid printf format oops. thanks
Attachment 220259 [details] pushed as 87baff2 - gnutls: Fix invalid printf format