gnutls: Fix invalid printf format

https://bugzilla.gnome.org/show_bug.cgi?id=681148